--- a/index.html
+++ b/index.html
@@ -74,6 +74,35 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
+    <td class="col-md-2">TLRY</td>
+    
+<td class="col-md-3">0.00</td>
+  
+
+<td class="col-md-4">0.17</td>
+  
+
+<td class="col-md-5">0.00</td>
+  
+
+<td class="col-md-6">0.00</td>
+  
+
+<td class="col-md-7">0.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
     <td class="col-md-2">TSLA</td>
     
 <td class="col-md-3">0.00</td>
