--- a/index.html
+++ b/index.html
@@ -62,6 +62,35 @@
 <td class="col-md-7">0.00</td>
   
 
+<td class="col-md-8">9.00</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">SNAP</td>
+    
+<td class="col-md-3">0.00</td>
+  
+
+<td class="col-md-4">0.25</td>
+  
+
+<td class="col-md-5">0.00</td>
+  
+
+<td class="col-md-6">0.00</td>
+  
+
+<td class="col-md-7">0.00</td>
+  
+
 <td class="col-md-8">0.00</td>
   
 
