--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 <td class="col-md-7">0.00</td>
   
 
-<td class="col-md-8">9.00</td>
+<td class="col-md-8">10.00</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
@@ -74,6 +74,35 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
+    <td class="col-md-2">AAPL</td>
+    
+<td class="col-md-3">0.00</td>
+  
+
+<td class="col-md-4">0.25</td>
+  
+
+<td class="col-md-5">0.00</td>
+  
+
+<td class="col-md-6">0.00</td>
+  
+
+<td class="col-md-7">0.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
     <td class="col-md-2">SNAP</td>
     
 <td class="col-md-3">0.00</td>
