--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <td class="col-md-8">5.00</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
@@ -79,7 +79,7 @@ s
 <td class="col-md-3">0.00</td>
   
 
-<td class="col-md-4">0.14</td>
+<td class="col-md-4">0.13</td>
   
 
 <td class="col-md-5">0.00</td>
@@ -94,7 +94,7 @@ s
 <td class="col-md-8">3.00</td>
   
 
-<td class="col-md-9">2.00</td>
+<td class="col-md-9">0.50</td>
   
 s
 </tr>
@@ -103,12 +103,12 @@ s
 
 <tr>
     <td class="col-md-1">3</td>
-    <td class="col-md-2">TSLA</td>
+    <td class="col-md-2">AAPL</td>
     
 <td class="col-md-3">0.00</td>
   
 
-<td class="col-md-4">0.29</td>
+<td class="col-md-4">0.25</td>
   
 
 <td class="col-md-5">0.00</td>
@@ -120,7 +120,7 @@ s
 <td class="col-md-7">0.00</td>
   
 
-<td class="col-md-8">2.67</td>
+<td class="col-md-8">0.00</td>
   
 
 <td class="col-md-9">1.00</td>
