--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <td class="col-md-3">0.00</td>
   
 
-<td class="col-md-4">0.31</td>
+<td class="col-md-4">0.29</td>
   
 
 <td class="col-md-5">0.00</td>
@@ -91,10 +91,39 @@ s
 <td class="col-md-7">0.00</td>
   
 
-<td class="col-md-8">1.33</td>
+<td class="col-md-8">1.67</td>
   
 
 <td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">TWTR</td>
+    
+<td class="col-md-3">0.00</td>
+  
+
+<td class="col-md-4">0.16</td>
+  
+
+<td class="col-md-5">0.00</td>
+  
+
+<td class="col-md-6">0.00</td>
+  
+
+<td class="col-md-7">0.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
