--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">59.01</td>
+  
+
+<td class="col-md-4">0.16</td>
+  
+
+<td class="col-md-5">1.03</td>
+  
+
+<td class="col-md-6">0.97</td>
+  
+
+<td class="col-md-7">0.61</td>
+  
+
+<td class="col-md-8">0.50</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
