--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">12.40</td>
+  
+
+<td class="col-md-4">0.61</td>
+  
+
+<td class="col-md-5">1.53</td>
+  
+
+<td class="col-md-6">1.19</td>
+  
+
+<td class="col-md-7">4.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.80</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
