--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">12.29</td>
+  
+
+<td class="col-md-4">0.63</td>
+  
+
+<td class="col-md-5">1.58</td>
+  
+
+<td class="col-md-6">1.33</td>
+  
+
+<td class="col-md-7">6.00</td>
+  
+
+<td class="col-md-8">3.60</td>
+  
+
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
