--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">11.91</td>
+  
+
+<td class="col-md-4">0.70</td>
+  
+
+<td class="col-md-5">1.74</td>
+  
+
+<td class="col-md-6">2.00</td>
+  
+
+<td class="col-md-7">8.00</td>
+  
+
+<td class="col-md-8">0.53</td>
+  
+
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
