--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">AMZN</td>
+    <td class="col-md-2">NIO</td>
     
-<td class="col-md-3">11.94</td>
+<td class="col-md-3">43.42</td>
   
 
-<td class="col-md-4">0.71</td>
+<td class="col-md-4">0.11</td>
   
 
-<td class="col-md-5">1.69</td>
+<td class="col-md-5">1.15</td>
   
 
-<td class="col-md-6">2.38</td>
+<td class="col-md-6">6.67</td>
   
 
-<td class="col-md-7">8.50</td>
+<td class="col-md-7">0.00</td>
   
 
-<td class="col-md-8">0.61</td>
+<td class="col-md-8">1.67</td>
   
 
-<td class="col-md-9">0.50</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
