--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">12.00</td>
+  
+
+<td class="col-md-4">0.74</td>
+  
+
+<td class="col-md-5">1.76</td>
+  
+
+<td class="col-md-6">2.87</td>
+  
+
+<td class="col-md-7">9.75</td>
+  
+
+<td class="col-md-8">0.88</td>
+  
+
+<td class="col-md-9">0.40</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
