--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">12.01</td>
+<td class="col-md-3">12.04</td>
   
 
-<td class="col-md-4">0.74</td>
+<td class="col-md-4">0.75</td>
   
 
-<td class="col-md-5">1.79</td>
+<td class="col-md-5">1.85</td>
   
 
-<td class="col-md-6">2.93</td>
+<td class="col-md-6">3.07</td>
   
 
-<td class="col-md-7">10.00</td>
+<td class="col-md-7">10.50</td>
   
 
-<td class="col-md-8">0.82</td>
+<td class="col-md-8">0.94</td>
   
 
-<td class="col-md-9">0.75</td>
+<td class="col-md-9">1.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">NIO</td>
+    
+<td class="col-md-3">43.54</td>
+  
+
+<td class="col-md-4">0.11</td>
+  
+
+<td class="col-md-5">1.30</td>
+  
+
+<td class="col-md-6">7.67</td>
+  
+
+<td class="col-md-7">0.00</td>
+  
+
+<td class="col-md-8">0.89</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
