--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">11.89</td>
+  
+
+<td class="col-md-4">0.76</td>
+  
+
+<td class="col-md-5">1.94</td>
+  
+
+<td class="col-md-6">3.13</td>
+  
+
+<td class="col-md-7">10.75</td>
+  
+
+<td class="col-md-8">1.60</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
