--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">11.95</td>
+  
+
+<td class="col-md-4">0.80</td>
+  
+
+<td class="col-md-5">2.23</td>
+  
+
+<td class="col-md-6">3.47</td>
+  
+
+<td class="col-md-7">5.50</td>
+  
+
+<td class="col-md-8">1.60</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
