--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">12.01</td>
+  
+
+<td class="col-md-4">0.85</td>
+  
+
+<td class="col-md-5">2.23</td>
+  
+
+<td class="col-md-6">4.31</td>
+  
+
+<td class="col-md-7">3.31</td>
+  
+
+<td class="col-md-8">0.69</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
