--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">11.80</td>
+  
+
+<td class="col-md-4">0.92</td>
+  
+
+<td class="col-md-5">2.53</td>
+  
+
+<td class="col-md-6">4.43</td>
+  
+
+<td class="col-md-7">1.48</td>
+  
+
+<td class="col-md-8">1.18</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
