--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">11.60</td>
+  
+
+<td class="col-md-4">0.99</td>
+  
+
+<td class="col-md-5">2.65</td>
+  
+
+<td class="col-md-6">5.83</td>
+  
+
+<td class="col-md-7">0.89</td>
+  
+
+<td class="col-md-8">0.62</td>
+  
+
+<td class="col-md-9">0.25</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
