--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">11.63</td>
+  
+
+<td class="col-md-4">1.15</td>
+  
+
+<td class="col-md-5">2.47</td>
+  
+
+<td class="col-md-6">2.07</td>
+  
+
+<td class="col-md-7">0.62</td>
+  
+
+<td class="col-md-8">1.00</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
