--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">11.70</td>
+  
+
+<td class="col-md-4">1.20</td>
+  
+
+<td class="col-md-5">2.64</td>
+  
+
+<td class="col-md-6">1.64</td>
+  
+
+<td class="col-md-7">0.74</td>
+  
+
+<td class="col-md-8">1.43</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
