--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">11.83</td>
+  
+
+<td class="col-md-4">1.27</td>
+  
+
+<td class="col-md-5">3.03</td>
+  
+
+<td class="col-md-6">1.26</td>
+  
+
+<td class="col-md-7">0.97</td>
+  
+
+<td class="col-md-8">1.30</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
