--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">11.53</td>
+  
+
+<td class="col-md-4">1.48</td>
+  
+
+<td class="col-md-5">3.56</td>
+  
+
+<td class="col-md-6">0.61</td>
+  
+
+<td class="col-md-7">0.59</td>
+  
+
+<td class="col-md-8">2.00</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
