--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">11.43</td>
+  
+
+<td class="col-md-4">1.65</td>
+  
+
+<td class="col-md-5">1.61</td>
+  
+
+<td class="col-md-6">0.56</td>
+  
+
+<td class="col-md-7">1.06</td>
+  
+
+<td class="col-md-8">1.60</td>
+  
+
+<td class="col-md-9">0.20</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
