--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">14.46</td>
+  
+
+<td class="col-md-4">0.73</td>
+  
+
+<td class="col-md-5">1.07</td>
+  
+
+<td class="col-md-6">0.85</td>
+  
+
+<td class="col-md-7">0.62</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
