--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">11.93</td>
+  
+
+<td class="col-md-4">1.29</td>
+  
+
+<td class="col-md-5">1.11</td>
+  
+
+<td class="col-md-6">1.79</td>
+  
+
+<td class="col-md-7">1.74</td>
+  
+
+<td class="col-md-8">1.09</td>
+  
+
+<td class="col-md-9">0.75</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
