--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">11.85</td>
+  
+
+<td class="col-md-4">1.39</td>
+  
+
+<td class="col-md-5">1.12</td>
+  
+
+<td class="col-md-6">2.15</td>
+  
+
+<td class="col-md-7">1.67</td>
+  
+
+<td class="col-md-8">1.44</td>
+  
+
+<td class="col-md-9">1.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
