--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">11.85</td>
+<td class="col-md-3">11.86</td>
   
 
-<td class="col-md-4">1.39</td>
+<td class="col-md-4">1.40</td>
   
 
-<td class="col-md-5">1.12</td>
+<td class="col-md-5">1.15</td>
   
 
-<td class="col-md-6">2.15</td>
+<td class="col-md-6">2.23</td>
   
 
-<td class="col-md-7">1.67</td>
+<td class="col-md-7">1.76</td>
   
 
-<td class="col-md-8">1.44</td>
+<td class="col-md-8">1.67</td>
   
 
-<td class="col-md-9">1.33</td>
+<td class="col-md-9">0.80</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">NIO</td>
+    
+<td class="col-md-3">22.69</td>
+  
+
+<td class="col-md-4">0.50</td>
+  
+
+<td class="col-md-5">2.91</td>
+  
+
+<td class="col-md-6">1.13</td>
+  
+
+<td class="col-md-7">0.70</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
