--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">11.75</td>
+  
+
+<td class="col-md-4">1.56</td>
+  
+
+<td class="col-md-5">1.47</td>
+  
+
+<td class="col-md-6">1.84</td>
+  
+
+<td class="col-md-7">1.11</td>
+  
+
+<td class="col-md-8">0.82</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
