--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">10.45</td>
+  
+
+<td class="col-md-4">2.03</td>
+  
+
+<td class="col-md-5">1.66</td>
+  
+
+<td class="col-md-6">0.69</td>
+  
+
+<td class="col-md-7">1.53</td>
+  
+
+<td class="col-md-8">1.67</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
