--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">10.10</td>
+  
+
+<td class="col-md-4">1.98</td>
+  
+
+<td class="col-md-5">1.33</td>
+  
+
+<td class="col-md-6">1.15</td>
+  
+
+<td class="col-md-7">1.04</td>
+  
+
+<td class="col-md-8">0.80</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
