--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">9.81</td>
+  
+
+<td class="col-md-4">2.18</td>
+  
+
+<td class="col-md-5">1.13</td>
+  
+
+<td class="col-md-6">1.32</td>
+  
+
+<td class="col-md-7">1.27</td>
+  
+
+<td class="col-md-8">1.57</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
