--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">BABA</td>
+    
+<td class="col-md-3">25.25</td>
+  
+
+<td class="col-md-4">2.24</td>
+  
+
+<td class="col-md-5">3.00</td>
+  
+
+<td class="col-md-6">2.00</td>
+  
+
+<td class="col-md-7">0.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
