--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">9.42</td>
+  
+
+<td class="col-md-4">2.33</td>
+  
+
+<td class="col-md-5">1.02</td>
+  
+
+<td class="col-md-6">1.63</td>
+  
+
+<td class="col-md-7">1.38</td>
+  
+
+<td class="col-md-8">1.33</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
