--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">9.39</td>
+  
+
+<td class="col-md-4">2.34</td>
+  
+
+<td class="col-md-5">1.10</td>
+  
+
+<td class="col-md-6">1.58</td>
+  
+
+<td class="col-md-7">1.40</td>
+  
+
+<td class="col-md-8">1.40</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
