--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">9.25</td>
+  
+
+<td class="col-md-4">2.35</td>
+  
+
+<td class="col-md-5">1.20</td>
+  
+
+<td class="col-md-6">1.49</td>
+  
+
+<td class="col-md-7">1.03</td>
+  
+
+<td class="col-md-8">1.00</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
