--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">8.81</td>
+  
+
+<td class="col-md-4">2.43</td>
+  
+
+<td class="col-md-5">1.29</td>
+  
+
+<td class="col-md-6">1.29</td>
+  
+
+<td class="col-md-7">1.07</td>
+  
+
+<td class="col-md-8">3.75</td>
+  
+
+<td class="col-md-9">2.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
