--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">8.06</td>
+  
+
+<td class="col-md-4">2.03</td>
+  
+
+<td class="col-md-5">1.21</td>
+  
+
+<td class="col-md-6">0.88</td>
+  
+
+<td class="col-md-7">0.93</td>
+  
+
+<td class="col-md-8">0.80</td>
+  
+
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
