--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">7.90</td>
+  
+
+<td class="col-md-4">1.93</td>
+  
+
+<td class="col-md-5">1.23</td>
+  
+
+<td class="col-md-6">1.00</td>
+  
+
+<td class="col-md-7">1.00</td>
+  
+
+<td class="col-md-8">1.11</td>
+  
+
+<td class="col-md-9">0.25</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
