--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">W</td>
+    
+<td class="col-md-3">11.38</td>
+  
+
+<td class="col-md-4">2.52</td>
+  
+
+<td class="col-md-5">1.86</td>
+  
+
+<td class="col-md-6">3.33</td>
+  
+
+<td class="col-md-7">1.50</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
