--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">7.79</td>
+  
+
+<td class="col-md-4">1.90</td>
+  
+
+<td class="col-md-5">1.30</td>
+  
+
+<td class="col-md-6">1.13</td>
+  
+
+<td class="col-md-7">1.14</td>
+  
+
+<td class="col-md-8">1.60</td>
+  
+
+<td class="col-md-9">2.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
