--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">7.43</td>
+  
+
+<td class="col-md-4">1.72</td>
+  
+
+<td class="col-md-5">1.39</td>
+  
+
+<td class="col-md-6">1.09</td>
+  
+
+<td class="col-md-7">1.42</td>
+  
+
+<td class="col-md-8">1.50</td>
+  
+
+<td class="col-md-9">1.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
