--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">7.37</td>
+  
+
+<td class="col-md-4">1.73</td>
+  
+
+<td class="col-md-5">1.46</td>
+  
+
+<td class="col-md-6">1.16</td>
+  
+
+<td class="col-md-7">1.32</td>
+  
+
+<td class="col-md-8">1.18</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
