--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">7.16</td>
+  
+
+<td class="col-md-4">1.66</td>
+  
+
+<td class="col-md-5">1.31</td>
+  
+
+<td class="col-md-6">1.41</td>
+  
+
+<td class="col-md-7">1.06</td>
+  
+
+<td class="col-md-8">0.85</td>
+  
+
+<td class="col-md-9">0.25</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
