--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">7.10</td>
+  
+
+<td class="col-md-4">1.65</td>
+  
+
+<td class="col-md-5">1.27</td>
+  
+
+<td class="col-md-6">1.38</td>
+  
+
+<td class="col-md-7">1.00</td>
+  
+
+<td class="col-md-8">0.79</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
