--- a/index.html
+++ b/index.html
@@ -62,10 +62,39 @@
 <td class="col-md-7">1.06</td>
   
 
-<td class="col-md-8">1.17</td>
+<td class="col-md-8">1.08</td>
   
 
-<td class="col-md-9">0.75</td>
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AAPL</td>
+    
+<td class="col-md-3">5.91</td>
+  
+
+<td class="col-md-4">2.41</td>
+  
+
+<td class="col-md-5">1.07</td>
+  
+
+<td class="col-md-6">3.00</td>
+  
+
+<td class="col-md-7">2.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
