--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AAPL</td>
+    
+<td class="col-md-3">5.95</td>
+  
+
+<td class="col-md-4">2.51</td>
+  
+
+<td class="col-md-5">1.54</td>
+  
+
+<td class="col-md-6">4.00</td>
+  
+
+<td class="col-md-7">2.20</td>
+  
+
+<td class="col-md-8">1.00</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
