--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">6.77</td>
+  
+
+<td class="col-md-4">1.54</td>
+  
+
+<td class="col-md-5">1.23</td>
+  
+
+<td class="col-md-6">1.13</td>
+  
+
+<td class="col-md-7">0.74</td>
+  
+
+<td class="col-md-8">1.25</td>
+  
+
+<td class="col-md-9">1.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
