--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">6.68</td>
+<td class="col-md-3">6.67</td>
   
 
-<td class="col-md-4">1.55</td>
+<td class="col-md-4">1.56</td>
   
 
 <td class="col-md-5">1.13</td>
   
 
-<td class="col-md-6">1.27</td>
+<td class="col-md-6">1.35</td>
   
 
-<td class="col-md-7">0.89</td>
+<td class="col-md-7">0.92</td>
   
 
-<td class="col-md-8">2.80</td>
+<td class="col-md-8">3.40</td>
   
 
-<td class="col-md-9">0.75</td>
+<td class="col-md-9">0.80</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">GE</td>
+    
+<td class="col-md-3">2.98</td>
+  
+
+<td class="col-md-4">1.63</td>
+  
+
+<td class="col-md-5">3.67</td>
+  
+
+<td class="col-md-6">1.00</td>
+  
+
+<td class="col-md-7">0.00</td>
+  
+
+<td class="col-md-8">2.00</td>
+  
+
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
