--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">6.65</td>
+<td class="col-md-3">6.63</td>
   
 
-<td class="col-md-4">1.56</td>
+<td class="col-md-4">1.57</td>
   
 
 <td class="col-md-5">1.15</td>
   
 
-<td class="col-md-6">1.35</td>
+<td class="col-md-6">1.33</td>
   
 
-<td class="col-md-7">0.87</td>
+<td class="col-md-7">0.92</td>
   
 
-<td class="col-md-8">3.40</td>
+<td class="col-md-8">3.80</td>
   
 
-<td class="col-md-9">0.50</td>
+<td class="col-md-9">1.25</td>
   
 s
 </tr>
@@ -94,7 +94,36 @@ s
 <td class="col-md-8">2.00</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">0.25</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">FB</td>
+    
+<td class="col-md-3">3.30</td>
+  
+
+<td class="col-md-4">1.59</td>
+  
+
+<td class="col-md-5">1.53</td>
+  
+
+<td class="col-md-6">1.64</td>
+  
+
+<td class="col-md-7">0.64</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
