--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">NIO</td>
+    
+<td class="col-md-3">16.25</td>
+  
+
+<td class="col-md-4">2.57</td>
+  
+
+<td class="col-md-5">2.50</td>
+  
+
+<td class="col-md-6">2.57</td>
+  
+
+<td class="col-md-7">1.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
