--- a/index.html
+++ b/index.html
@@ -53,19 +53,77 @@
 <td class="col-md-4">1.56</td>
   
 
-<td class="col-md-5">1.31</td>
+<td class="col-md-5">1.30</td>
   
 
 <td class="col-md-6">1.22</td>
   
 
-<td class="col-md-7">1.11</td>
+<td class="col-md-7">1.17</td>
   
 
-<td class="col-md-8">1.12</td>
+<td class="col-md-8">0.76</td>
   
 
-<td class="col-md-9">0.75</td>
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AAPL</td>
+    
+<td class="col-md-3">5.65</td>
+  
+
+<td class="col-md-4">2.32</td>
+  
+
+<td class="col-md-5">2.08</td>
+  
+
+<td class="col-md-6">3.50</td>
+  
+
+<td class="col-md-7">1.62</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">MU</td>
+    
+<td class="col-md-3">6.40</td>
+  
+
+<td class="col-md-4">0.00</td>
+  
+
+<td class="col-md-5">1.29</td>
+  
+
+<td class="col-md-6">2.00</td>
+  
+
+<td class="col-md-7">0.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
