--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">AMZN</td>
+    <td class="col-md-2">NIO</td>
     
-<td class="col-md-3">5.88</td>
+<td class="col-md-3">15.96</td>
   
 
-<td class="col-md-4">3.83</td>
+<td class="col-md-4">2.49</td>
   
 
-<td class="col-md-5">1.31</td>
+<td class="col-md-5">2.64</td>
   
 
-<td class="col-md-6">4.67</td>
+<td class="col-md-6">1.52</td>
   
 
 <td class="col-md-7">1.33</td>
   
 
-<td class="col-md-8">0.00</td>
+<td class="col-md-8">4.00</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
