--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">AMZN</td>
+    <td class="col-md-2">NIO</td>
     
-<td class="col-md-3">5.89</td>
+<td class="col-md-3">15.78</td>
   
 
-<td class="col-md-4">3.85</td>
+<td class="col-md-4">2.53</td>
   
 
-<td class="col-md-5">1.35</td>
+<td class="col-md-5">2.77</td>
   
 
-<td class="col-md-6">4.00</td>
+<td class="col-md-6">1.65</td>
   
 
-<td class="col-md-7">1.33</td>
+<td class="col-md-7">1.53</td>
   
 
-<td class="col-md-8">2.33</td>
+<td class="col-md-8">0.00</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
