--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">NIO</td>
     
-<td class="col-md-3">15.78</td>
+<td class="col-md-3">15.79</td>
   
 
-<td class="col-md-4">2.53</td>
+<td class="col-md-4">2.54</td>
   
 
-<td class="col-md-5">2.77</td>
+<td class="col-md-5">2.82</td>
   
 
-<td class="col-md-6">1.65</td>
+<td class="col-md-6">1.70</td>
   
 
-<td class="col-md-7">1.53</td>
+<td class="col-md-7">1.60</td>
   
 
-<td class="col-md-8">0.00</td>
+<td class="col-md-8">4.67</td>
   
 
 <td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">6.35</td>
+  
+
+<td class="col-md-4">1.48</td>
+  
+
+<td class="col-md-5">1.30</td>
+  
+
+<td class="col-md-6">1.06</td>
+  
+
+<td class="col-md-7">1.24</td>
+  
+
+<td class="col-md-8">0.57</td>
+  
+
+<td class="col-md-9">0.50</td>
   
 s
 </tr>
