--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">6.15</td>
+  
+
+<td class="col-md-4">1.46</td>
+  
+
+<td class="col-md-5">1.31</td>
+  
+
+<td class="col-md-6">0.99</td>
+  
+
+<td class="col-md-7">0.78</td>
+  
+
+<td class="col-md-8">0.77</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
