--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">5.77</td>
   
 
-<td class="col-md-4">3.69</td>
+<td class="col-md-4">3.70</td>
   
 
-<td class="col-md-5">2.19</td>
+<td class="col-md-5">2.22</td>
   
 
-<td class="col-md-6">4.36</td>
+<td class="col-md-6">4.45</td>
   
 
-<td class="col-md-7">2.43</td>
+<td class="col-md-7">2.50</td>
   
 
-<td class="col-md-8">3.50</td>
+<td class="col-md-8">4.40</td>
   
 
-<td class="col-md-9">0.50</td>
+<td class="col-md-9">0.30</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">6.11</td>
+  
+
+<td class="col-md-4">1.45</td>
+  
+
+<td class="col-md-5">1.30</td>
+  
+
+<td class="col-md-6">1.10</td>
+  
+
+<td class="col-md-7">0.67</td>
+  
+
+<td class="col-md-8">0.85</td>
+  
+
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
