--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">5.82</td>
+  
+
+<td class="col-md-4">3.80</td>
+  
+
+<td class="col-md-5">2.52</td>
+  
+
+<td class="col-md-6">4.23</td>
+  
+
+<td class="col-md-7">2.93</td>
+  
+
+<td class="col-md-8">5.60</td>
+  
+
+<td class="col-md-9">0.80</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
