--- a/index.html
+++ b/index.html
@@ -53,19 +53,48 @@
 <td class="col-md-4">3.10</td>
   
 
-<td class="col-md-5">2.43</td>
+<td class="col-md-5">2.34</td>
   
 
-<td class="col-md-6">1.31</td>
+<td class="col-md-6">1.28</td>
   
 
-<td class="col-md-7">1.83</td>
+<td class="col-md-7">1.94</td>
   
 
-<td class="col-md-8">1.60</td>
+<td class="col-md-8">1.78</td>
   
 
-<td class="col-md-9">1.67</td>
+<td class="col-md-9">0.60</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">5.41</td>
+  
+
+<td class="col-md-4">1.42</td>
+  
+
+<td class="col-md-5">1.17</td>
+  
+
+<td class="col-md-6">0.96</td>
+  
+
+<td class="col-md-7">1.15</td>
+  
+
+<td class="col-md-8">1.31</td>
+  
+
+<td class="col-md-9">0.75</td>
   
 s
 </tr>
