--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">NIO</td>
+    
+<td class="col-md-3">12.23</td>
+  
+
+<td class="col-md-4">3.48</td>
+  
+
+<td class="col-md-5">2.55</td>
+  
+
+<td class="col-md-6">1.49</td>
+  
+
+<td class="col-md-7">2.37</td>
+  
+
+<td class="col-md-8">0.43</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
