--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">BABA</td>
+    
+<td class="col-md-3">7.77</td>
+  
+
+<td class="col-md-4">2.34</td>
+  
+
+<td class="col-md-5">1.68</td>
+  
+
+<td class="col-md-6">2.36</td>
+  
+
+<td class="col-md-7">1.36</td>
+  
+
+<td class="col-md-8">1.17</td>
+  
+
+<td class="col-md-9">0.25</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
