--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">4.69</td>
+<td class="col-md-3">4.68</td>
   
 
 <td class="col-md-4">1.39</td>
   
 
-<td class="col-md-5">1.05</td>
+<td class="col-md-5">1.06</td>
   
 
 <td class="col-md-6">1.16</td>
   
 
-<td class="col-md-7">1.19</td>
+<td class="col-md-7">1.29</td>
   
 
-<td class="col-md-8">1.43</td>
+<td class="col-md-8">1.50</td>
   
 
 <td class="col-md-9">1.25</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">NBEV</td>
+    
+<td class="col-md-3">9.45</td>
+  
+
+<td class="col-md-4">4.56</td>
+  
+
+<td class="col-md-5">1.12</td>
+  
+
+<td class="col-md-6">1.71</td>
+  
+
+<td class="col-md-7">1.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
