--- a/index.html
+++ b/index.html
@@ -65,7 +65,36 @@
 <td class="col-md-8">2.33</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">4.81</td>
+  
+
+<td class="col-md-4">2.57</td>
+  
+
+<td class="col-md-5">2.95</td>
+  
+
+<td class="col-md-6">0.67</td>
+  
+
+<td class="col-md-7">1.25</td>
+  
+
+<td class="col-md-8">0.53</td>
+  
+
+<td class="col-md-9">0.75</td>
   
 s
 </tr>
