--- a/index.html
+++ b/index.html
@@ -53,19 +53,48 @@
 <td class="col-md-4">1.45</td>
   
 
-<td class="col-md-5">1.42</td>
+<td class="col-md-5">1.39</td>
   
 
-<td class="col-md-6">1.57</td>
+<td class="col-md-6">1.59</td>
   
 
-<td class="col-md-7">0.98</td>
+<td class="col-md-7">1.02</td>
   
 
-<td class="col-md-8">1.35</td>
+<td class="col-md-8">1.56</td>
   
 
-<td class="col-md-9">0.60</td>
+<td class="col-md-9">1.75</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">NBEV</td>
+    
+<td class="col-md-3">7.77</td>
+  
+
+<td class="col-md-4">9.72</td>
+  
+
+<td class="col-md-5">3.53</td>
+  
+
+<td class="col-md-6">4.22</td>
+  
+
+<td class="col-md-7">1.49</td>
+  
+
+<td class="col-md-8">0.50</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
