--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">NIO</td>
     
-<td class="col-md-3">10.41</td>
+<td class="col-md-3">10.42</td>
   
 
-<td class="col-md-4">2.83</td>
+<td class="col-md-4">2.85</td>
   
 
-<td class="col-md-5">1.29</td>
+<td class="col-md-5">1.31</td>
   
 
 <td class="col-md-6">1.06</td>
   
 
-<td class="col-md-7">0.96</td>
+<td class="col-md-7">1.07</td>
   
 
-<td class="col-md-8">2.00</td>
+<td class="col-md-8">2.33</td>
   
 
-<td class="col-md-9">1.33</td>
+<td class="col-md-9">1.25</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">TSLA</td>
+    <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">4.15</td>
+<td class="col-md-3">3.66</td>
   
 
-<td class="col-md-4">1.45</td>
+<td class="col-md-4">1.77</td>
   
 
-<td class="col-md-5">1.42</td>
+<td class="col-md-5">2.29</td>
   
 
-<td class="col-md-6">1.54</td>
+<td class="col-md-6">1.50</td>
   
 
-<td class="col-md-7">0.94</td>
+<td class="col-md-7">1.36</td>
   
 
-<td class="col-md-8">1.20</td>
+<td class="col-md-8">1.50</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
