--- a/index.html
+++ b/index.html
@@ -53,19 +53,48 @@
 <td class="col-md-4">3.60</td>
   
 
-<td class="col-md-5">1.44</td>
+<td class="col-md-5">1.46</td>
   
 
 <td class="col-md-6">2.25</td>
   
 
-<td class="col-md-7">1.25</td>
+<td class="col-md-7">1.20</td>
   
 
 <td class="col-md-8">0.56</td>
   
 
-<td class="col-md-9">0.75</td>
+<td class="col-md-9">0.40</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">SQ</td>
+    
+<td class="col-md-3">2.56</td>
+  
+
+<td class="col-md-4">2.64</td>
+  
+
+<td class="col-md-5">1.55</td>
+  
+
+<td class="col-md-6">1.43</td>
+  
+
+<td class="col-md-7">0.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
