--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">3.54</td>
+<td class="col-md-3">3.53</td>
   
 
-<td class="col-md-4">1.47</td>
+<td class="col-md-4">1.46</td>
   
 
-<td class="col-md-5">1.48</td>
+<td class="col-md-5">1.45</td>
   
 
-<td class="col-md-6">0.75</td>
+<td class="col-md-6">0.76</td>
   
 
-<td class="col-md-7">1.58</td>
+<td class="col-md-7">1.27</td>
   
 
-<td class="col-md-8">1.05</td>
+<td class="col-md-8">0.90</td>
   
 
-<td class="col-md-9">0.50</td>
+<td class="col-md-9">0.14</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">NIO</td>
+    
+<td class="col-md-3">10.46</td>
+  
+
+<td class="col-md-4">3.70</td>
+  
+
+<td class="col-md-5">1.62</td>
+  
+
+<td class="col-md-6">1.84</td>
+  
+
+<td class="col-md-7">1.02</td>
+  
+
+<td class="col-md-8">0.87</td>
+  
+
+<td class="col-md-9">1.33</td>
   
 s
 </tr>
