--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">3.45</td>
+<td class="col-md-3">3.44</td>
   
 
 <td class="col-md-4">1.47</td>
   
 
-<td class="col-md-5">1.60</td>
+<td class="col-md-5">1.56</td>
   
 
-<td class="col-md-6">0.83</td>
+<td class="col-md-6">0.86</td>
   
 
-<td class="col-md-7">1.62</td>
+<td class="col-md-7">1.52</td>
   
 
-<td class="col-md-8">1.10</td>
+<td class="col-md-8">1.26</td>
   
 
-<td class="col-md-9">1.67</td>
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">NIO</td>
+    
+<td class="col-md-3">10.29</td>
+  
+
+<td class="col-md-4">3.72</td>
+  
+
+<td class="col-md-5">1.72</td>
+  
+
+<td class="col-md-6">1.77</td>
+  
+
+<td class="col-md-7">0.69</td>
+  
+
+<td class="col-md-8">1.17</td>
+  
+
+<td class="col-md-9">0.40</td>
   
 s
 </tr>
