--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">3.32</td>
+<td class="col-md-3">3.31</td>
   
 
 <td class="col-md-4">1.51</td>
   
 
-<td class="col-md-5">1.33</td>
+<td class="col-md-5">1.32</td>
   
 
-<td class="col-md-6">1.17</td>
+<td class="col-md-6">1.16</td>
   
 
-<td class="col-md-7">1.39</td>
+<td class="col-md-7">1.42</td>
   
 
 <td class="col-md-8">0.96</td>
   
 
-<td class="col-md-9">2.33</td>
+<td class="col-md-9">0.80</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">NIO</td>
+    
+<td class="col-md-3">9.74</td>
+  
+
+<td class="col-md-4">3.86</td>
+  
+
+<td class="col-md-5">1.72</td>
+  
+
+<td class="col-md-6">1.35</td>
+  
+
+<td class="col-md-7">0.64</td>
+  
+
+<td class="col-md-8">0.93</td>
+  
+
+<td class="col-md-9">2.00</td>
   
 s
 </tr>
