--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">2.85</td>
+<td class="col-md-3">2.84</td>
   
 
 <td class="col-md-4">1.99</td>
@@ -59,13 +59,42 @@
 <td class="col-md-6">1.21</td>
   
 
-<td class="col-md-7">0.89</td>
+<td class="col-md-7">0.88</td>
   
 
-<td class="col-md-8">1.23</td>
+<td class="col-md-8">1.19</td>
   
 
-<td class="col-md-9">1.80</td>
+<td class="col-md-9">0.62</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">3.16</td>
+  
+
+<td class="col-md-4">1.60</td>
+  
+
+<td class="col-md-5">1.68</td>
+  
+
+<td class="col-md-6">1.67</td>
+  
+
+<td class="col-md-7">0.98</td>
+  
+
+<td class="col-md-8">0.87</td>
+  
+
+<td class="col-md-9">0.75</td>
   
 s
 </tr>
