--- a/index.html
+++ b/index.html
@@ -56,16 +56,45 @@
 <td class="col-md-5">2.61</td>
   
 
-<td class="col-md-6">1.57</td>
+<td class="col-md-6">1.44</td>
   
 
-<td class="col-md-7">0.71</td>
+<td class="col-md-7">0.72</td>
   
 
-<td class="col-md-8">1.60</td>
+<td class="col-md-8">1.78</td>
   
 
-<td class="col-md-9">0.50</td>
+<td class="col-md-9">0.17</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">2.74</td>
+  
+
+<td class="col-md-4">2.01</td>
+  
+
+<td class="col-md-5">1.70</td>
+  
+
+<td class="col-md-6">0.92</td>
+  
+
+<td class="col-md-7">0.82</td>
+  
+
+<td class="col-md-8">0.89</td>
+  
+
+<td class="col-md-9">1.50</td>
   
 s
 </tr>
