--- a/index.html
+++ b/index.html
@@ -53,19 +53,48 @@
 <td class="col-md-4">2.33</td>
   
 
-<td class="col-md-5">1.64</td>
+<td class="col-md-5">1.61</td>
   
 
-<td class="col-md-6">1.00</td>
+<td class="col-md-6">0.97</td>
   
 
-<td class="col-md-7">1.25</td>
+<td class="col-md-7">1.33</td>
   
 
-<td class="col-md-8">1.57</td>
+<td class="col-md-8">1.25</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.25</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">2.67</td>
+  
+
+<td class="col-md-4">2.01</td>
+  
+
+<td class="col-md-5">1.62</td>
+  
+
+<td class="col-md-6">0.75</td>
+  
+
+<td class="col-md-7">0.80</td>
+  
+
+<td class="col-md-8">0.80</td>
+  
+
+<td class="col-md-9">2.33</td>
   
 s
 </tr>
