--- a/index.html
+++ b/index.html
@@ -45,24 +45,24 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">TSLA</td>
+    <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">2.58</td>
+<td class="col-md-3">2.86</td>
   
 
-<td class="col-md-4">1.97</td>
+<td class="col-md-4">1.61</td>
   
 
-<td class="col-md-5">1.38</td>
+<td class="col-md-5">1.66</td>
   
 
-<td class="col-md-6">0.69</td>
+<td class="col-md-6">0.49</td>
   
 
-<td class="col-md-7">0.69</td>
+<td class="col-md-7">0.75</td>
   
 
-<td class="col-md-8">0.90</td>
+<td class="col-md-8">1.60</td>
   
 
 <td class="col-md-9">0.67</td>
