--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 <td class="col-md-4">1.92</td>
   
 
-<td class="col-md-5">1.14</td>
+<td class="col-md-5">1.11</td>
   
 
 <td class="col-md-6">0.68</td>
   
 
-<td class="col-md-7">0.83</td>
+<td class="col-md-7">0.82</td>
   
 
-<td class="col-md-8">1.11</td>
+<td class="col-md-8">1.18</td>
   
 
-<td class="col-md-9">1.67</td>
+<td class="col-md-9">0.60</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">AAPL</td>
+    <td class="col-md-2">GE</td>
     
-<td class="col-md-3">2.02</td>
+<td class="col-md-3">1.27</td>
   
 
-<td class="col-md-4">2.56</td>
+<td class="col-md-4">2.11</td>
   
 
-<td class="col-md-5">1.48</td>
+<td class="col-md-5">2.43</td>
   
 
-<td class="col-md-6">1.33</td>
+<td class="col-md-6">1.00</td>
   
 
-<td class="col-md-7">0.91</td>
+<td class="col-md-7">0.89</td>
   
 
-<td class="col-md-8">0.89</td>
+<td class="col-md-8">0.00</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
