--- a/index.html
+++ b/index.html
@@ -53,19 +53,48 @@
 <td class="col-md-4">1.68</td>
   
 
-<td class="col-md-5">1.33</td>
+<td class="col-md-5">1.31</td>
   
 
-<td class="col-md-6">0.73</td>
+<td class="col-md-6">0.75</td>
   
 
-<td class="col-md-7">1.94</td>
+<td class="col-md-7">2.00</td>
   
 
-<td class="col-md-8">0.75</td>
+<td class="col-md-8">0.93</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">1.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">2.14</td>
+  
+
+<td class="col-md-4">5.18</td>
+  
+
+<td class="col-md-5">1.38</td>
+  
+
+<td class="col-md-6">0.80</td>
+  
+
+<td class="col-md-7">0.97</td>
+  
+
+<td class="col-md-8">0.62</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
