--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">QQQ</td>
+    <td class="col-md-2">TLRY</td>
     
-<td class="col-md-3">2.13</td>
+<td class="col-md-3">1.09</td>
   
 
-<td class="col-md-4">6.97</td>
+<td class="col-md-4">4.20</td>
   
 
-<td class="col-md-5">1.08</td>
+<td class="col-md-5">3.06</td>
   
 
-<td class="col-md-6">1.38</td>
+<td class="col-md-6">1.75</td>
   
 
-<td class="col-md-7">1.02</td>
+<td class="col-md-7">1.50</td>
   
 
-<td class="col-md-8">0.93</td>
+<td class="col-md-8">1.43</td>
   
 
-<td class="col-md-9">0.50</td>
+<td class="col-md-9">0.75</td>
   
 s
 </tr>
@@ -91,7 +91,7 @@ s
 <td class="col-md-7">4.08</td>
   
 
-<td class="col-md-8">0.79</td>
+<td class="col-md-8">0.83</td>
   
 
 <td class="col-md-9">0.20</td>
