--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TWTR</td>
+    
+<td class="col-md-3">1.19</td>
+  
+
+<td class="col-md-4">4.49</td>
+  
+
+<td class="col-md-5">1.58</td>
+  
+
+<td class="col-md-6">3.04</td>
+  
+
+<td class="col-md-7">2.33</td>
+  
+
+<td class="col-md-8">1.00</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
