--- a/index.html
+++ b/index.html
@@ -45,24 +45,24 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">TWTR</td>
+    <td class="col-md-2">TLRY</td>
     
-<td class="col-md-3">1.18</td>
+<td class="col-md-3">1.08</td>
   
 
-<td class="col-md-4">4.54</td>
+<td class="col-md-4">4.43</td>
   
 
-<td class="col-md-5">1.64</td>
+<td class="col-md-5">3.65</td>
   
 
-<td class="col-md-6">3.13</td>
+<td class="col-md-6">1.58</td>
   
 
-<td class="col-md-7">2.13</td>
+<td class="col-md-7">1.71</td>
   
 
-<td class="col-md-8">0.82</td>
+<td class="col-md-8">1.62</td>
   
 
 <td class="col-md-9">0.67</td>
