--- a/index.html
+++ b/index.html
@@ -45,24 +45,24 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">TLRY</td>
+    <td class="col-md-2">AAPL</td>
     
-<td class="col-md-3">1.07</td>
+<td class="col-md-3">1.79</td>
   
 
-<td class="col-md-4">4.60</td>
+<td class="col-md-4">2.88</td>
   
 
-<td class="col-md-5">3.15</td>
+<td class="col-md-5">1.48</td>
   
 
-<td class="col-md-6">2.15</td>
+<td class="col-md-6">0.80</td>
   
 
-<td class="col-md-7">1.87</td>
+<td class="col-md-7">0.74</td>
   
 
-<td class="col-md-8">1.22</td>
+<td class="col-md-8">0.83</td>
   
 
 <td class="col-md-9">0.33</td>
