--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">QQQ</td>
+    <td class="col-md-2">TLRY</td>
     
-<td class="col-md-3">2.17</td>
+<td class="col-md-3">1.03</td>
   
 
-<td class="col-md-4">7.42</td>
+<td class="col-md-4">4.83</td>
   
 
-<td class="col-md-5">1.01</td>
+<td class="col-md-5">2.60</td>
   
 
-<td class="col-md-6">1.45</td>
+<td class="col-md-6">2.25</td>
   
 
-<td class="col-md-7">0.88</td>
+<td class="col-md-7">2.00</td>
   
 
-<td class="col-md-8">1.23</td>
+<td class="col-md-8">0.67</td>
   
 
-<td class="col-md-9">0.20</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
