--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 <td class="col-md-5">1.35</td>
   
 
-<td class="col-md-6">0.85</td>
+<td class="col-md-6">0.78</td>
   
 
-<td class="col-md-7">1.16</td>
+<td class="col-md-7">1.05</td>
   
 
 <td class="col-md-8">1.80</td>
@@ -76,22 +76,51 @@ s
     <td class="col-md-1">2</td>
     <td class="col-md-2">TLRY</td>
     
-<td class="col-md-3">1.03</td>
+<td class="col-md-3">1.04</td>
   
 
-<td class="col-md-4">4.83</td>
+<td class="col-md-4">4.93</td>
   
 
-<td class="col-md-5">2.60</td>
+<td class="col-md-5">2.72</td>
   
 
-<td class="col-md-6">1.95</td>
+<td class="col-md-6">2.09</td>
   
 
-<td class="col-md-7">2.31</td>
+<td class="col-md-7">2.29</td>
   
 
-<td class="col-md-8">0.73</td>
+<td class="col-md-8">1.00</td>
+  
+
+<td class="col-md-9">0.75</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">TWTR</td>
+    
+<td class="col-md-3">1.10</td>
+  
+
+<td class="col-md-4">4.80</td>
+  
+
+<td class="col-md-5">1.66</td>
+  
+
+<td class="col-md-6">3.57</td>
+  
+
+<td class="col-md-7">0.67</td>
+  
+
+<td class="col-md-8">0.56</td>
   
 
 <td class="col-md-9">0.33</td>
