--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">AMZN</td>
+    <td class="col-md-2">TLRY</td>
     
-<td class="col-md-3">2.30</td>
+<td class="col-md-3">1.01</td>
   
 
-<td class="col-md-4">1.92</td>
+<td class="col-md-4">4.97</td>
   
 
-<td class="col-md-5">1.12</td>
+<td class="col-md-5">2.36</td>
   
 
-<td class="col-md-6">1.10</td>
+<td class="col-md-6">2.47</td>
   
 
-<td class="col-md-7">0.92</td>
+<td class="col-md-7">1.76</td>
   
 
-<td class="col-md-8">1.50</td>
+<td class="col-md-8">1.11</td>
   
 
-<td class="col-md-9">0.60</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
