--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">2.08</td>
+  
+
+<td class="col-md-4">2.91</td>
+  
+
+<td class="col-md-5">1.58</td>
+  
+
+<td class="col-md-6">1.07</td>
+  
+
+<td class="col-md-7">0.84</td>
+  
+
+<td class="col-md-8">0.64</td>
+  
+
+<td class="col-md-9">1.43</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
