--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">MU</td>
+    
+<td class="col-md-3">2.80</td>
+  
+
+<td class="col-md-4">6.00</td>
+  
+
+<td class="col-md-5">1.90</td>
+  
+
+<td class="col-md-6">5.33</td>
+  
+
+<td class="col-md-7">0.88</td>
+  
+
+<td class="col-md-8">3.67</td>
+  
+
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
