--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">MU</td>
+    
+<td class="col-md-3">2.91</td>
+  
+
+<td class="col-md-4">6.33</td>
+  
+
+<td class="col-md-5">2.20</td>
+  
+
+<td class="col-md-6">6.33</td>
+  
+
+<td class="col-md-7">1.11</td>
+  
+
+<td class="col-md-8">1.71</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
