--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">MU</td>
+    
+<td class="col-md-3">2.98</td>
+  
+
+<td class="col-md-4">6.37</td>
+  
+
+<td class="col-md-5">2.18</td>
+  
+
+<td class="col-md-6">4.33</td>
+  
+
+<td class="col-md-7">1.60</td>
+  
+
+<td class="col-md-8">0.62</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
