--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">FB</td>
+    
+<td class="col-md-3">0.87</td>
+  
+
+<td class="col-md-4">2.55</td>
+  
+
+<td class="col-md-5">2.17</td>
+  
+
+<td class="col-md-6">1.27</td>
+  
+
+<td class="col-md-7">0.56</td>
+  
+
+<td class="col-md-8">1.67</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
