--- a/index.html
+++ b/index.html
@@ -50,19 +50,48 @@
 <td class="col-md-3">0.87</td>
   
 
-<td class="col-md-4">2.55</td>
+<td class="col-md-4">2.56</td>
   
 
-<td class="col-md-5">2.17</td>
+<td class="col-md-5">2.22</td>
   
 
-<td class="col-md-6">1.27</td>
+<td class="col-md-6">1.32</td>
   
 
-<td class="col-md-7">0.56</td>
+<td class="col-md-7">0.61</td>
   
 
-<td class="col-md-8">1.67</td>
+<td class="col-md-8">2.00</td>
+  
+
+<td class="col-md-9">0.25</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TWTR</td>
+    
+<td class="col-md-3">0.94</td>
+  
+
+<td class="col-md-4">8.61</td>
+  
+
+<td class="col-md-5">1.24</td>
+  
+
+<td class="col-md-6">1.48</td>
+  
+
+<td class="col-md-7">0.76</td>
+  
+
+<td class="col-md-8">1.33</td>
   
 
 <td class="col-md-9">0.33</td>
