--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">1.71</td>
   
 
-<td class="col-md-4">3.61</td>
+<td class="col-md-4">3.62</td>
   
 
 <td class="col-md-5">1.15</td>
   
 
-<td class="col-md-6">1.84</td>
+<td class="col-md-6">1.88</td>
   
 
-<td class="col-md-7">2.04</td>
+<td class="col-md-7">2.09</td>
   
 
-<td class="col-md-8">0.77</td>
+<td class="col-md-8">0.74</td>
   
 
-<td class="col-md-9">0.42</td>
+<td class="col-md-9">0.54</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TLT</td>
+    
+<td class="col-md-3">1.47</td>
+  
+
+<td class="col-md-4">6.83</td>
+  
+
+<td class="col-md-5">2.05</td>
+  
+
+<td class="col-md-6">0.55</td>
+  
+
+<td class="col-md-7">1.29</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
