--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">W</td>
+    <td class="col-md-2">TWTR</td>
     
-<td class="col-md-3">0.91</td>
+<td class="col-md-3">0.94</td>
   
 
-<td class="col-md-4">5.41</td>
+<td class="col-md-4">11.52</td>
   
 
-<td class="col-md-5">1.60</td>
+<td class="col-md-5">1.36</td>
   
 
-<td class="col-md-6">1.24</td>
+<td class="col-md-6">1.21</td>
   
 
-<td class="col-md-7">0.82</td>
+<td class="col-md-7">1.05</td>
   
 
-<td class="col-md-8">2.67</td>
+<td class="col-md-8">1.29</td>
   
 
-<td class="col-md-9">0.25</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
@@ -88,13 +88,13 @@ s
 <td class="col-md-6">0.67</td>
   
 
-<td class="col-md-7">0.92</td>
+<td class="col-md-7">0.89</td>
   
 
-<td class="col-md-8">0.97</td>
+<td class="col-md-8">0.94</td>
   
 
-<td class="col-md-9">0.80</td>
+<td class="col-md-9">0.29</td>
   
 s
 </tr>
