--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">1.61</td>
   
 
-<td class="col-md-4">3.66</td>
+<td class="col-md-4">3.67</td>
   
 
-<td class="col-md-5">1.32</td>
+<td class="col-md-5">1.30</td>
   
 
-<td class="col-md-6">0.58</td>
+<td class="col-md-6">0.59</td>
   
 
-<td class="col-md-7">0.63</td>
+<td class="col-md-7">0.66</td>
   
 
-<td class="col-md-8">1.15</td>
+<td class="col-md-8">1.14</td>
   
 
 <td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.81</td>
+  
+
+<td class="col-md-4">1.94</td>
+  
+
+<td class="col-md-5">1.53</td>
+  
+
+<td class="col-md-6">1.17</td>
+  
+
+<td class="col-md-7">1.03</td>
+  
+
+<td class="col-md-8">0.69</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
